slurm-50042758.out
  File "analysis_notebook.py", line 305
    raise ValueError (f"Invalid wt nucleotide {wt} at site {site+1}")
                                                                   ^
SyntaxError: invalid syntax
